--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -6,33 +6,43 @@ pipeline {
     }
     stages{
         stage("build"){
+            when{
+                changeset "**/worker/**"
+            }
             steps{
-                echo 'Compiling worker app'
+                echo 'Compiling worker app..'
                 dir('worker'){
                     sh 'mvn compile'
                 }
             }
         }
-        stage("test"){
+        stage('test'){
+            when{
+                changeset "**/worker/**"
+            }
             steps{
-                echo 'Running Unit Tets on worker app'
+                echo 'Running unit test on worker app..'
                 dir('worker'){
                     sh 'mvn clean test'
                 }
             }
         }
-        stage("package"){
+        stage('package'){
+            when{
+                branch 'master'
+                changeset "**/worker/**"
+            }
             steps{
                 echo 'Packaging worker app'
                 dir('worker'){
                     sh 'mvn package -DskipTests'
+                    archiveArtifacts artifacts: '**/target/*.jar', fingerprint: true
                 }
             }
         }
     }
     post{
         always{
-            archiveArtifacts artifacts: '**/target/*.jar', fingerprint: true
             echo 'Building multibranch pipeline for worker is completed..'
         }
     }
