--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -1,14 +1,13 @@
 pipeline {
-    agent any
-
-    tools{
-        maven 'maven 3.6.1'
+    agent{
+        docker{
+            image 'maven:3.6.1-jdk-8-slim'
+            args '-v $HOME/.m2:/root/.m2'
+        }
     }
+
     stages{
         stage("build"){
-            when{
-                changeset "**/worker/**"
-            }
             steps{
                 echo 'Compiling worker app..'
                 dir('worker'){
@@ -17,9 +16,6 @@ pipeline {
             }
         }
         stage('test'){
-            when{
-                changeset "**/worker/**"
-            }
             steps{
                 echo 'Running unit test on worker app..'
                 dir('worker'){
@@ -28,12 +24,8 @@ pipeline {
             }
         }
         stage('package'){
-            when{
-                branch 'master'
-                changeset "**/worker/**"
-            }
             steps{
-                echo 'Packaging worker app'
+                echo 'packaging worker app into a jarfile'
                 dir('worker'){
                     sh 'mvn package -DskipTests'
                     archiveArtifacts artifacts: '**/target/*.jar', fingerprint: true
@@ -43,13 +35,7 @@ pipeline {
     }
     post{
         always{
-            echo 'Building multibranch pipeline for worker is completed..'
-        }
-        failure{
-            slackSend (channel: "instavote-cd", message: "Build Failed - ${env.JOB_NAME} ${env.BUILD_NUMBER} (<${env.BUILD_URL}|Open>)")
-        }
-        success {
-            slackSend (channel: "instavote-cd", message: "Build Succeeded - ${env.JOB_NAME} ${env.BUILD_NUMBER} (<${env.BUILD_URL}|Open>)")
+            echo 'the job is complete'
         }
     }
 }
