--- a/vote/Jenkinsfile
+++ b/vote/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline{
     agent{
         docker{
-            image 'python:3.7.2'
+            image 'python:3.8.5-alpine3.12'
         }
     }
     stages{
@@ -9,8 +9,7 @@ pipeline{
             steps{
                 echo 'check version and compiling app'
                 dir('vote'){
-                    sh 'pip install -r requirements.txt'
-                    sh 'pip --version'
+                    sh 'pip3 install --no-cache-dir -r requirements.txt'
                 }
             }
         }
