--- a/vote/Jenkinsfile
+++ b/vote/Jenkinsfile
@@ -2,6 +2,7 @@ pipeline{
     agent{
         docker{
             image 'python:3.8.5-alpine3.12'
+            args '-u root:sudo -v $HOME/workspace/instavote_vote_vote_Jenkinsfile:/instavote_vote_vote_Jenkinsfile'
         }
     }
     stages{
