--- a/vote/Jenkinsfile
+++ b/vote/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline{
     agent{
         docker{
-            image 'python:3.8.5-alpine3.12'
+            image 'python:3.7.2'
             args '-u root:sudo -v $HOME/workspace/instavote_vote_vote_Jenkinsfile:/instavote_vote_vote_Jenkinsfile'
         }
     }
