--- a/vote/Jenkinsfile
+++ b/vote/Jenkinsfile
@@ -18,7 +18,7 @@ pipeline{
             steps{
                 echo 'test app'
                 dir('vote'){
-                    sh 'python3 app.py'
+                    sh 'python3 --version'
                 }
             }
         }
