--- a/result/Jenkinsfile
+++ b/result/Jenkinsfile
@@ -49,7 +49,7 @@ pipeline {
           echo 'Packaging result app with docker'
           script{
             docker.withRegistry('https://index.docker.io/v1/', 'dockerlogin') {
-                def workerImage = docker.build("anandaguntur18/result:v${env.BUILD_ID}", "./result")
+                def workerImage = docker.build("aey16/result:v${env.BUILD_ID}", "./result")
                 workerImage.push()
                 workerImage.push("latest")
                 workerImage.push("${env.BRANCH_NAME}")
