--- a/vote/Jenkinsfile
+++ b/vote/Jenkinsfile
@@ -54,7 +54,7 @@ pipeline {
           echo 'Packaging vote app with docker'
           script{
             docker.withRegistry('https://index.docker.io/v1/', 'dockerlogin') {
-                def workerImage = docker.build("anandaguntur18/vote:v${env.BUILD_ID}", "./vote")
+                def workerImage = docker.build("aey16/vote:v${env.BUILD_ID}", "./vote")
                 workerImage.push()
                 workerImage.push("latest")
                 workerImage.push("${env.BRANCH_NAME}")
